# statextract

./: .gitignore  cache_typed.py  combined_pdf.py  duckdb_nb.ipynb  helpers.py  labelstudio_api.json  manual_dataset.ipynb  pcurve_stats.ipynb  pcurve_testing.jl  pyproject.toml  questions.csv  r_packages.txt  rev_test.ipynb  sampled_work_ids.json  sampled_work_ids_med.txt  short_mds_ids.json  sling_config.yaml  tasks.json  test_file.py  tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts
julia/: test.jl
pcurves_rs/: Cargo.toml
pcurves_rs/src/: index_json.rs
results/claude-3-5-sonnet-latest/: W1894235553.json  W2013023210.json  W2015326783.json  W2173283340.json  W2309201146.json  W2418250657.json  W2576096217.json  W2766052557.json  W2782133606.json  W2903626356.json  (+19 more)
results/claude-3-5-sonnet-latest-text/: W1894235553.json  W2013023210.json  W2015326783.json  W2173283340.json  W2309201146.json  W2418250657.json  W2576096217.json  W2766052557.json  W2782133606.json  W2903626356.json  W3017984468.json  W3087314568.json  W3117182283.json  W3158512258.json  W3208508274.json  W4210775865.json  W4249391657.json  W4282939378.json  W4296035822.json  W4364355608.json  W4387477367.json  W4389565192.json  W4392157904.json
statextract/: classify_topics.ipynb  dump_types.py  get_dois.py  hello.py  helpers.py  instruct_try2.py  labelstudio_task_construction.py  md_retriever.py  prefilter.py  server.py  stat_extraction.py  storage.py  typedefs.py
(+62 files in other folders)
